--- a/package.json
+++ b/package.json
@@ -15,11 +15,20 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "gray-matter": "^4.0.3",
+    "hastscript": "^7.2.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-katex": "^6.0.3",
+    "rehype-stringify": "^9.0.3",
     "remark": "^14.0.3",
+    "remark-directive": "^2.0.1",
     "remark-html": "^15.0.2",
-    "typescript": "5.1.3"
+    "remark-math": "^5.1.1",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
+    "typescript": "5.1.3",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.2"
   }
 }
